--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content=" FILL ME IN ">
     <meta name="author" content=" FILL ME IN ">
-    <link href="//fonts.useso.com/css?family=Open+Sans:400,700" rel="stylesheet" >
+    <!--<link href="//fonts.useso.com/css?family=Open+Sans:400,700" rel="stylesheet" >-->
     <title>Cameron Pittman: Portfolio</title>
     <style>
       html {
